<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="410dp"
        android:layout_height="243dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/save_date_2" />

    <ImageView
        android:id="@+id/ImageBtnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/ic_baseline_arrow_back_24"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDateFrom"
        android:layout_width="142dp"
        android:layout_height="43dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="76dp"
        android:hint="@string/received_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextTimeTo"
        android:layout_width="142dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/resend_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDateTo" />

    <EditText
        android:id="@+id/editTextDateTo"
        android:layout_width="142dp"
        android:layout_height="43dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/resend_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextTimeFrom"
        android:layout_width="142dp"
        android:layout_height="43dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="24dp"
        android:hint="@string/received_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDateFrom" />

    <TextView
        android:id="@+id/textViewFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:text="@string/from"
        android:textColor="#FF9E80"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTimeFrom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextDateFrom"
        app:layout_constraintVertical_bias="0.065" />

    <TextView
        android:id="@+id/textViewTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="20dp"
        android:text="@string/to"
        android:textColor="#FF9E80"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextDateTo"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toEndOf="@+id/editTextDateFrom"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/please_choose_a_date"
        android:textColor="#FF80AB"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/buttonOffline"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:background="@color/colorAccent2"
        android:text="Offline"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonOnline"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:background="@color/colorAccent2"
        android:text="Online"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>