<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:elevation="5dp"
    app:cardUseCompatPadding="true">
    <LinearLayout
        android:id="@+id/layout_booking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@mipmap/ic_launcher"
                android:layout_gravity="center_vertical"
                android:id="@+id/image_car"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"
                />
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txtUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/user"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textSize" />
                <TextView
                    android:id="@+id/txtIdbooking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/id"
                    android:visibility="gone"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textSize" />
                <TextView
                    android:id="@+id/txtCar_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/car_name"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textSize"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/txtCar_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/car_price"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textSize" />
                <TextView
                    android:id="@+id/txtCar_pick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/car_pick"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textSize" />
                <TextView
                    android:id="@+id/txtCar_return"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/car_return"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/textSize" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/check_icon"
                android:layout_width="193dp"
                android:layout_height="40dp"
                android:src="@drawable/check"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/cancel_icon"
                android:src="@drawable/delete"/>
        </LinearLayout>
    </LinearLayout>



</androidx.cardview.widget.CardView>