<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:elevation="5dp"
    app:cardUseCompatPadding="true">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view_admin"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/activity_drawer_admin" />

    <LinearLayout
        android:id="@+id/layout_bill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">


        <TextView
            android:id="@+id/txtBillId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_marginLeft"
            android:text="@string/bill_id"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textSize" />
        <TextView
            android:id="@+id/txtIdbooking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_marginLeft"
            android:text="@string/booking_id"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textSize" />
        <TextView
            android:id="@+id/txtBill_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_marginLeft"
            android:text="@string/bill_create"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/textSize" />
    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#00008577"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="@drawable/ic_baseline_menu_24"
        tools:ignore="MissingConstraints" />

</androidx.cardview.widget.CardView>